# AnonDrop

./: README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: publish.yml
anondrop-pypackage/: pyproject.toml  setup.py
src/AnonDrop/: __init__.py
tests/: test.py
